# prism

./: .gitignore  Cargo.toml  README.md  build.rs  build_driver.sh  debug_client.c  flake.nix  install.sh  rust-toolchain.toml  uninstall.sh
docs/: new_plan.md  plan.md
driver_bundle/: Info.plist
src/: check_keys.rs  driver.rs  host.rs  ipc.rs  lib.rs  process.rs  socket.rs
