[package]
name = "prism"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prismd"
path = "src/bin/prismd.rs"

[[bin]]
name = "prism"
path = "src/bin/prism.rs"

[dependencies]
coreaudio-sys = "0.2"
libc = "0.2"
syslog = "7.0.0"
log = "0.4"
core-foundation = "0.10.1"
cocoa = "0.26.1"
objc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plist = "1.6"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
